--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html>
+<link rel="stylesheet" href="style/ctrlvp.css">
 <body>
 	<h1>WARNING:</h1>
 	<h2> DO NOT BLINK YOUR EYES. </h2>
+	<p class="title">Don't. </p>
 </body>
 </html>
