--- a/index.html
+++ b/index.html
@@ -2,8 +2,10 @@
 <html>
 <link rel="stylesheet" href="style/ctrlvp.css">
 <body>
+<div class="title">
 	<h1>WARNING:</h1>
 	<h2> DO NOT BLINK YOUR EYES. </h2>
-	<p class="title">Don't. </p>
+	<p>You don't want to miss what's going to happen next. </p>
+	</div>
 </body>
 </html>
