--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
+<head>
+<title>Vivek Patel, ctrlvp </title>
 <link rel="stylesheet" href="style/ctrlvp.css">
+</head>
 <body>
 <div class="title">
 	<h1>WARNING:</h1>
