--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
 					<div>
 						<img src="./images/dom/01.png" alt="">
 						<img src="./images/dom/02.png" alt="">
-						<img src="./images/dom/dom-img-01.png" alt="">
+						<img src="./images/dom/03.png" alt="">
 						<img src="./images/dom/dom-img-01.png" alt="">
 						<img src="./images/dom/dom-img-01.png" alt="">
 						<img src="./images/dom/dom-img-01.png" alt="">
