--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 				          <div class="row">
 				            <div class="col-xs-4">
 				              <div class="row">
-				                <img src="my_photo.jpg" alt="" class="img-circle my_photo"> <br />
+				                <img src="./images/my_photo.jpg" alt="" class="img-circle my_photo"> <br />
 				              </div>
 				            </div>
 				            <div class="col-xs-8 shift-right">
