--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 						Projekt zawiera opracowanie wnętrza kuchni 8,5m2. Zabudowa kuchni w kształcie litery "U" zaprojektowana została z użyciem mebli modułowych i mebli na wymiar. Wysokość całej zabudowy kuchennej to 2310mm. Blaty robocze osadzone są na wysokości 858mm, co oznacza, że przeznaczone są dla użytkowników o średnim wzroście.
 					</div>
 					<div>
-						<img src="./images/kuchnia-1-img-1.jpg" alt="">
+						<img src="http://i.imgur.com/VJ6nQZc.jpg" alt="">
 						<div>Korpusy szafek kuchennych wykonane z płyty wiórowej o grubości 16mm. Fronty wykonane są z lakierowanej na wysoki połysk płyty wiórowej. Całkowita grubość frontu to 18mm. Aluminiowe uchwyty wbudowane są we fronty dodając kuchni nowoczeny wygląd. Blaty o grubości 38mm łączone są ze sobą śrubami na imbus. </div>
 						<img src="./images/kuchnia-1-img-2.png" alt="">
 						<img src="./images/kuchnia-1-img-3.png" alt="">
