--- a/index.html
+++ b/index.html
@@ -207,8 +207,8 @@
 						<img src="./images/kuchnia-1-img-3.png" alt="">
 						<img src="./images/kuchnia-1-img-4.png" alt="">
 						<div>Lodówka, mikrofala, płyta indukcyjna oraz piekarnik zostały zabudowane. We wszystkich szufladach oraz zawiasach mebli zainstalowane są ciche domyki. W wysokiej zabudowie w szafkach o szerokosci 150mm i 300mm znajdują się wysuwane szafy cargo z modułowymi akcesoriami. Dodatkowymi elementami wyposażenia kuchni są również: wysuwane półki na garnki w głębokiej narożnej szafce o szerokości 1200mm, karuzela w lewej narożnej szafce oraz zestaw koszy do segregacji odpadów w szafce pod zlewem.</div>
-						<img src="./images/kuchnia1img5.jpg" alt="">
-						<img src="./images/kuchnia-1-img-6.jpg" alt="">
+						<img src="http://i.imgur.com/McfJFtL.jpg" alt="">
+						<img src="http://i.imgur.com/to9NQGa.jpg" alt="">
 					</div>
 				</div>
 			</div>
