--- a/index.html
+++ b/index.html
@@ -226,12 +226,12 @@
 						Projekt zawiera opracowanie wnętrza kuchnio powierzchni 9m2. Kuchnia zaprojektowana została dla rodziny 3 osobowej. Układ kuchni jest otwarty. Półwyspa łączy pomieszczenie z  pokojem dziennym. Wysokość całej zabudowy kuchennej to 2078mm. Blaty robocze osadzone są na wysokości 858mm, co oznacza, że przeznaczone są dla użytkowników o średnim wzroście.
 					</div>
 					<div>
-						<img src="./images/kuchnia-2-img-1.jpg" alt="">
+						<img src="http://i.imgur.com/NEwHSpi.jpg" alt="">
 						<div>Korpusy szafek kuchennych wykonane z płyty wiórowej o grubości 16mm. Fronty wykonane są natomiast z drewna bukowego bejcowanego. Całkowita grubość frontu to 19mm. Uchwyty ze szkła mlecznego i czarnego wbudowane są we fronty, dodając kuchni nowoczeny wygląd. Blaty o grubości 38mm łączone są ze sobą śrubami na imbus. W projekcie zastosowane jest 3-punkotowe oświetlenie podszafkowe, zintegrowane.</div>
 						<img src="./images/kuchnia-2-img-2.png" alt="">
 						<img src="./images/kuchnia-2-img-3.png" alt="">
 						<div>We wszystkich szufladach oraz zawiasach mebli zainstalowane są ciche domyki. Dodatkowymi elementami wyposażenia kuchni są: wysuwane cargo na ręczniki i środki czystości o szerokości 150mm, karuzela w prawej narożnej szafce oraz aluminiowe organizery szuflad.</div>
-						<img src="./images/kuchnia-2-img-4.jpg" alt="">
+						<img src="http://i.imgur.com/rXIUb0u.jpg" alt="">
 					</div>
 				</div>
 			</div>
@@ -249,13 +249,13 @@
 						Projekt zawiera opracowanie aneksu kuchennego połączonego z salonem o powierzchni 52m2. Zabudowa kuchni zaprojektowana została z użyciem mebli modułowych oraz mebli na wymiar. Wysokość całej zabudowy kuchennej to 2800mm. Blaty robocze osadzone są na wysokości 856mm, co oznacza, że przeznaczone są dla użytkowników o średnim wzroście.
 					</div>
 					<div>
-						<img src="./images/kuchnia-3-img-1.jpg" alt="">
+						<img src="http://i.imgur.com/jtcyCai.jpg" alt="">
 						<div>Korpusy szafek kuchennych wykonane z płyty wiórowej o grubości 16mm. Fronty są z fornirowanej płyty wiórowej, mają wyprofilowany wchwyt . Całkowita grubość frontu to 19mm. Blaty o grubości 36mm łączone są ze sobą śrubami na imbus.</div>
 						<img src="./images/kuchnia-3-img-2.png" alt="">
 						<img class="resized-img" src="./images/kuchnia-3-img-3.png" alt="">
 						<img src="./images/kuchnia-3-img-4.png" alt="">
 						<div>Sprzęty AGD zostały zabudowane. We wszystkich szufladach oraz zawiasach mebli zainstalowane są ciche domyki. Dodatkowymi elementami wyposażenia kuchni są: wysuwana zabudowa z koszami cargo (5-poziomowe kosze) w wysokiej szafie o szerokości 450mm oraz wewnętrzne szuflady z modułowymi akcesoriami w wysokiej szafie o szerokości 450mm.</div>
-						<img src="./images/kuchnia-3-img-5.jpg" alt="">
+						<img src="http://i.imgur.com/JYUBwMr.jpg" alt="">
 					</div>
 				</div>
 			</div>
@@ -279,7 +279,7 @@
 						<div>
 							Sprzęty AGD zostały zabudowane. We wszystkich szufladach oraz zawiasach mebli zainstalowane są ciche domyki. Dodatkowymi elementami wyposażenia kuchni są: wysuwana zabudowa z koszami cargo (2-poziomowe kosze) w szafce o szerokości 150mm oraz wewnętrzne szuflady z modułowymi akcesoriami w wysokiej szafce o szerokości 600mm.
 						</div>
-						<img src="./images/kuchnia-4-img-3.jpg" alt="">
+						<img src="http://i.imgur.com/Io4PGyY.jpg" alt="">
 					</div>
 				</div>
 			</div>
@@ -302,8 +302,8 @@
 						<img src="./images/chair/02.png" alt="">
 						<img src="./images/chair/03.png" alt="">
 						<img src="./images/chair/04.png" alt="">
-						<img src="./images/chair/05.jpg" alt="">
-						<img src="./images/chair/06.jpg" alt="">
+						<img src="http://i.imgur.com/KqjjNV8.jpg" alt="">
+						<img src="http://i.imgur.com/2N7K6ZQ.jpg" alt="">
 					</div>
 				</div>
 			</div>
@@ -368,7 +368,7 @@
 				          <div class="row">
 				            <div class="col-xs-4">
 				              <div class="row">
-				                <img src="./images/my_photo.jpg" alt="" class="img-circle my_photo"> <br />
+				                <img src="./images/myPhoto.jpg" alt="" class="img-circle my_photo"> <br />
 				              </div>
 				            </div>
 				            <div class="col-xs-8 shift-right">
