--- a/index.html
+++ b/index.html
@@ -322,11 +322,6 @@
 					</div>
 					<div>
 						<img src="./images/chair/01.jpg" alt="">
-						<img src="./images/chair/02.png" alt="">
-						<img src="./images/chair/03.png" alt="">
-						<img src="./images/chair/04.png" alt="">
-						<img src="./images/chair/05.jpg" alt="">
-						<img src="./images/chair/06.jpg" alt="">
 					</div>
 				</div>
 			</div>
@@ -368,7 +363,7 @@
 				          <div class="row">
 				            <div class="col-xs-4">
 				              <div class="row">
-				                <img src="./images/myPhoto.jpg" alt="" class="img-circle my_photo"> <br />
+				                <img src="http://i.imgur.com/sJdtX7r.jpg" alt="" class="img-circle my_photo"> <br />
 				              </div>
 				            </div>
 				            <div class="col-xs-8 shift-right">
