--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 				</div>
 				<div class="about">
 					<span class="glyphicon glyphicon-remove close-about"></span>
-					<h3>This is about section</h3>
-					<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Itaque voluptates quos repudiandae, recusandae natus incidunt corrupti dolore quia reprehenderit provident reiciendis maiores expedita autem necessitatibus nemo deserunt delectus similique labore dolorum eveniet aperiam hic. Cumque nemo asperiores obcaecati, quisquam, repellat necessitatibus provident placeat optio accusamus enim tempora at. Tempore ad alias unde delectus cupiditate similique magni, nemo labore necessitatibus et sunt reiciendis ea voluptate, fuga asperiores eius quod nobis? Alias voluptas molestias dolorem maxime dolores eos, nobis qui, delectus numquam in eaque dolor architecto, optio id amet nihil iure aliquid corporis officiis voluptatibus natus accusantium! Earum iure in sit sunt!</span>
+					<h2>Absolwentka Architektury Wnętrz. Pragnąca rozwijać się w temacie designu i grafiki. Wielbicielka sztuki. Zafascynowana rowojem techniki. Nieustraszona podróżniczka, która marzy o zwiedzeniu wszystkich kontynentów. Wielbicielka eksperymentów kulinarnych. Lubi nowe wyzwania i pracę zespołową.</h2>
+					
 				</div>
 			</div>
 			
@@ -139,7 +139,7 @@
 				
 				<div class="park-container">
 					<div>
-						DETIALLSAS HERHERHERE>>CFE>F Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, animi ad fugiat impedit esse voluptatum ipsam aliquam. Saepe reiciendis assumenda aliquam, enim earum nemo tempora omnis. Rerum ad tempore maiores eius, ea saepe error minima eaque? Esse, at enim! Corporis, sunt, maxime. Fuga rem, dolore eos quis voluptatem consequatur delectus.
+						Projekt wykonany dla niewielkiej społeczności miejscaowości liczącej 4 tysiące mieszkańców. Obejmuje zadaszoną strefę wejścia, strefę wypoczynku biernego, mini plac zabaw dla najmłodszych, fontannę oraz strefę dla młodzierzy.
 					</div>
 					<div>
 						<img src="./images/park/01.png" alt="">
