--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				</div>
 				<div class="about">
 					<span class="glyphicon glyphicon-remove close-about"></span>
-					<h2>Absolwentka Architektury Wnętrz. Pragnąca rozwijać się w temacie designu i grafiki. Wielbicielka sztuki. Zafascynowana rowojem techniki. Nieustraszona podróżniczka, która marzy o zwiedzeniu wszystkich kontynentów. Wielbicielka eksperymentów kulinarnych. Lubi nowe wyzwania i pracę zespołową.</h2>
+					<h3 class="about-text">Absolwentka Architektury Wnętrz. Pragnąca rozwijać się w temacie designu i grafiki. Wielbicielka sztuki. Zafascynowana rozwojem techniki. Nieustraszona podróżniczka, która marzy o zwiedzeniu wszystkich kontynentów. Wielbicielka eksperymentów kulinarnych. Lubi nowe wyzwania i pracę zespołową.</h3>
 					
 				</div>
 			</div>
@@ -139,7 +139,7 @@
 				
 				<div class="park-container">
 					<div>
-						Projekt wykonany dla niewielkiej społeczności miejscaowości liczącej 4 tysiące mieszkańców. Obejmuje zadaszoną strefę wejścia, strefę wypoczynku biernego, mini plac zabaw dla najmłodszych, fontannę oraz strefę dla młodzierzy.
+						Projekt wykonany dla niewielkiej społeczności miejscaowości liczącej 4 tysiące mieszkańców. Obejmuje zadaszoną strefę wejścia, strefę wypoczynku biernego, mini plac zabaw dla najmłodszych, fontannę oraz strefę dla młodzieży.
 					</div>
 					<div>
 						<img src="./images/park/01.png" alt="">
