--- a/index.html
+++ b/index.html
@@ -438,7 +438,7 @@
 				          <div class="page-header page-header-2">WYKSZTAŁCENIE</div>
 				          <div class="row ">
 				            <div class="col-xs-5 date">
-				              10.2010 — 04.2013
+				              10.2010 — 06.2013
 				            </div>
 				            <div class="col-xs-7 r">
 				              <div class="row company-name">
@@ -534,13 +534,26 @@
 			<div class="contact" id="contact">
 				<div class="contact-container">
 					<div class="contact-details">
-						<h2>Contact details here...</h2>
-						<h3>Sub Title</h3>
-						<span>Lorem ipsum dolor sit amet, consectetur adipisicing elit. In dolor iste illo perspiciatis illum doloribus voluptate eos aperiam excepturi quisquam nam quam ex ipsum repudiandae nostrum facere fugit ratione deleniti molestias, temporibus corporis. Nihil numquam at dicta veniam repellendus quidem asperiores ipsum consectetur. Deserunt voluptates autem, veritatis excepturi voluptatibus unde at in aut quod labore! Molestias illo ipsa repellendus impedit expedita fugit consequatur quaerat laborum similique voluptatum. Saepe repellendus, perspiciatis nobis consequuntur assumenda ipsa pariatur aliquam. Veritatis ab libero eveniet, id facere, voluptatem sequi sunt quod ad mollitia incidunt. Temporibus, impedit, accusamus eius doloribus possimus nobis minima omnis tempore id?</span>
+						<h3>Agata Patel</h3>
+						<span>Jeśli chcesz się ze mną skontaktować użyj formularza po prawej lub informacji kontaktowych poniźej.</span>
+						<div class="row contact-details-container">
+							<div class="col-md-5 center-icon-container">
+								<span class="glyphicon glyphicon-envelope"></span>
+							</div>
+							<div class="col-md-7">
+								agatapatel@outlook.com
+							</div>
+							<div class="col-md-5 center-icon-container">
+								<span class="glyphicon glyphicon-phone"></span>
+							</div>
+							<div class="col-md-7">
+								570 686 169
+							</div>
+						</div>
 
 					</div>
 					<div class="contact-form">
-						<form action="http://formspree.io/your@email.com" id="contact-form" class="">
+						<form action="http://formspree.io/agatapatel@outlook.com" id="contact-form" class="">
 							<div class="form-group">
 								<div class="row">
 									<div class="col-md-4">
