--- a/index.html
+++ b/index.html
@@ -540,13 +540,13 @@
 							<div class="col-md-5 center-icon-container">
 								<span class="glyphicon glyphicon-envelope"></span>
 							</div>
-							<div class="col-md-7">
+							<div class="col-md-7 contact-email">
 								agatapatel@outlook.com
 							</div>
 							<div class="col-md-5 center-icon-container">
 								<span class="glyphicon glyphicon-phone"></span>
 							</div>
-							<div class="col-md-7">
+							<div class="col-md-7 contact-phone">
 								570 686 169
 							</div>
 						</div>
