--- a/index.html
+++ b/index.html
@@ -318,7 +318,7 @@
 				
 				<div class="random-container">
 					<div>
-						DETIALLSAS HERHERHERE>>CFE>F Lorem ipsum dolor sit amet, consectetur adipisicing elit. Corrupti, animi ad fugiat impedit esse voluptatum ipsam aliquam. Saepe reiciendis assumenda aliquam, enim earum nemo tempora omnis. Rerum ad tempore maiores eius, ea saepe error minima eaque? Esse, at enim! Corporis, sunt, maxime. Fuga rem, dolore eos quis voluptatem consequatur delectus.
+						Więcej projektów już wkrótce...
 					</div>
 					<div>
 						<img src="./images/chair/01.jpg" alt="">
@@ -416,7 +416,7 @@
 				          </div>
 				          <div class="row next-item">
 				            <div class="col-xs-5 date">
-				              07.2013 — 09.2013
+				              07.2012 — 09.2012
 				            </div>
 				            <div class="col-xs-7 r">
 				              <div class="row company-name">
