--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
 					<span class="glyphicon glyphicon-menu-left back-to-portfolio-lnk"></span>
 				</div>
 				<div class="random-title" id="random-title">
-					<span>Inne projeckty</span>
+					<span>Inne projekty</span>
 				</div>
 				
 				<div class="random-container">
@@ -321,7 +321,7 @@
 						Więcej projektów już wkrótce...
 					</div>
 					<div>
-						<img src="./images/chair/01.jpg" alt="">
+						<img src="http://i.imgur.com/STlBOCw.png" alt="">
 					</div>
 				</div>
 			</div>
