--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@
 						Więcej projektów już wkrótce...
 					</div>
 					<div>
-						<img src="http://i.imgur.com/STlBOCw.png" alt="">
+						<img src="http://i.imgur.com/STlBOCw.png" alt="wkrótce">
 					</div>
 				</div>
 			</div>
