--- a/index.html
+++ b/index.html
@@ -375,7 +375,7 @@
 				                <span class="glyphicon glyphicon-fire"></span>
 				              </div>
 				              <div class="row">
-				                 agatapatel@outlook.com
+				                 patelagata@gmail.com
 				                 <span class="glyphicon glyphicon-envelope"></span>
 				              </div>
 				              <div class="row">
@@ -398,13 +398,25 @@
 
 				        <div class="jumbotron">
 				          <div class="page-header">DOŚWIADCZENIE</div>
-				          <div class="row ">
+									<div class="row">
+										<div class="col-xs-5 date">
+												01.2016 — obecnie
+										</div>
+										<div class="col-xs-7 r">
+											<div class="row company-name">Asberg Meble, Krapkowice</div>
+											<div class="row company-position">Projektant</div>
+											<div class="row">
+													Projektowanie wnętrz oraz mebli na wymiar. Konsultacje z klientem, wymiarowanie projektowanych pomieszczeń, nadzór i monitorowanie pracy stolarni. Sporządzanie dokumentacji technicznej. Projektowanie nowych ekspozycji w salonach sprzedaży i wdrażanie nowych produktów do oferty firmy. 
+											</div>
+										</div>
+                  </div>
+				          <div class="row next-item">
 				            <div class="col-xs-5 date">
 				              07.2014 — 03.2015
 				            </div>
 				            <div class="col-xs-7 r">
 				              <div class="row company-name">
-				                DOM sp. z o.o. "Black Red White", Kędzierzyn-Koźle
+				                Black Red White, Kędzierzyn-Koźle
 				              </div>
 				              <div class="row company-position">
 				                Projektant - Sprzedawca
@@ -474,17 +486,13 @@
 				                  </div><div>
 				                  <div class="program-list">
 				                    <ul>
-				                      <li>
-				                        ArchiCAD
-				                      </li>
-				                      <li>
-				                        SketchUp
-				                      </li>
-				                      <li>Fusion</li>
-				                      <li>Pytha</li>
-				                      <li>Corel Draw</li>
-				                      <li>Inkscape</li>
-				                      <li>Artlantis</li>
+				                      <li>SketchUp</li>
+															<li>CAD Kuchnie</li>
+															<li>Fusion</li>
+															<li>Corel Draw</li>
+															<li>ArchiCAD</li>
+															<li>Artlantis</li>
+															<li>Vray</li>
 				                    </ul>
 				                  </div>
 				                </div>
@@ -515,11 +523,11 @@
 				                  <span class="glyphicon glyphicon-heart"></span>
 				                   &nbsp;&nbsp; Zainteresowania
 				                   <ul>
-				                     <li>Cyfrowy rysunek i malarstwo</li>
-				                     <li>Architektura Bauhausu</li>
-				                     <li>Podróżowanie</li>
-				                     <li>Eksperymenty kulinarne</li>
-				                     <li>Nowinki techniczne</li>
+				                     <li>Sztuka nowoczesna</li>
+															<li>Podróżowanie</li>
+															<li>Wpływ sztuki na rozwój dziecka</li>
+															<li>Rzeźba w glinie</li>
+															<li>Nowinki techniczne</li>
 				                   </ul>
 				                </div>
 
