--- a/index.html
+++ b/index.html
@@ -2,20 +2,16 @@
 <html lang="en">
 <head>
 	<meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-    <title>Agata Patel</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-
+	<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+	<title>Agata Patel</title>
+	<meta name="description" content="Agata Patel - Architekt Wnętrz">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css"/>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap-theme.min.css" />
 	<link rel="stylesheet" href="./public/css/style.css">
 	<link rel="stylesheet" href="./public/css/animate.css">
-	<link href='http://fonts.googleapis.com/css?family=Montserrat|Raleway' rel='stylesheet' type='text/css'>
+	<link rel='stylesheet' href='http://fonts.googleapis.com/css?family=Raleway'>
 	<script type="text/javascript" src="http://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
-	<script type="text/javascript" src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/js/bootstrap.min.js"></script>
 	<script type="text/javascript" src="./public/js/main.js"></script>
-	
 </head>
 <body>
 	<div class="site-container">
@@ -34,7 +30,6 @@
 					<h3 class="about-text">Absolwentka Architektury Wnętrz. Pragnąca rozwijać się w temacie designu i grafiki. Wielbicielka sztuki. Zafascynowana rozwojem techniki. Nieustraszona podróżniczka, która marzy o zwiedzeniu wszystkich kontynentów. Wielbicielka eksperymentów kulinarnych. Lubi nowe wyzwania i pracę zespołową.</h3>		
 				</div>
 			</div>
-			
 			
 			<div class="portfolio" id="portfolio">
 				<div class="back-btn-container">
