:iphone: :ok_hand:
Looks cool on phone now. :raised_hands:

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -17,88 +17,21 @@
 	<!-- inject:nav:html -->
 	<nav class="header-large">
     <div class="nav-container row">
-        <div class="col-md-6 col-sm-6 col-xs-6">
+        <div class="col-md-3 col-sm-3 col-xs-6">
             <div class="nav__logo-wrap">
                 <div>
                     <a class="nav__logo-link" href="/">
                         <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-                            <!-- Created with Inkscape (http://www.inkscape.org/) -->
-                            <svg
-                            xmlns:dc="http://purl.org/dc/elements/1.1/"
-                            xmlns:cc="http://creativecommons.org/ns#"
-                            xmlns="http://www.w3.org/2000/svg"
-                            xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
-                            width="26.378479mm"
-                            height="21.500059mm"
-                            viewBox="0 0 93.467052 76.181312"
-                            class="nav__logo-svg"
-                            version="1.1"
-                            inkscape:version="0.91 r13725"
-                            sodipodi:docname="logo-draw.svg">
-                            <defs
-                                id="defs4" />
-                            <sodipodi:namedview
-                                id="base"
-                                pagecolor="#ffffff"
-                                bordercolor="#666666"
-                                borderopacity="1.0"
-                                inkscape:pageopacity="0.0"
-                                inkscape:pageshadow="2"
-                                inkscape:zoom="1"
-                                inkscape:cx="-415.64951"
-                                inkscape:cy="146.49586"
-                                inkscape:document-units="px"
-                                inkscape:current-layer="layer1"
-                                showgrid="false"
-                                showborder="false"
-                                fit-margin-top="0"
-                                fit-margin-left="0"
-                                fit-margin-right="0"
-                                fit-margin-bottom="0"
-                                inkscape:window-width="1920"
-                                inkscape:window-height="1018"
-                                inkscape:window-x="1672"
-                                inkscape:window-y="-8"
-                                inkscape:window-maximized="1" />
-                            <metadata
-                                id="metadata7">
-                                <rdf:RDF>
-                                <cc:Work
-                                    rdf:about="">
-                                    <dc:format>image/svg+xml</dc:format>
-                                    <dc:type
-                                    rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
-                                    <dc:title></dc:title>
-                                </cc:Work>
-                                </rdf:RDF>
-                            </metadata>
-                            <g
-                                inkscape:label="Layer 1"
-                                inkscape:groupmode="layer"
-                                id="layer1"
-                                transform="translate(-450.51354,-480.69058)">
-                                <rect
-                                style="opacity:1;fill:#fff6d5;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:0;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                                id="rect4161-7"
-                                width="77.921539"
-                                height="9.3707905"
-                                x="671.51868"
-                                y="164.2702"
-                                transform="matrix(0.5245984,0.85134982,0.86860509,-0.495505,0,0)"
-                                inkscape:export-xdpi="96.290627"
-                                inkscape:export-ydpi="96.290627" />
-                                <rect
-                                style="opacity:1;fill:#ffffff;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:0;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                                id="rect4161"
-                                width="83.62944"
-                                height="10.05722"
-                                x="-256.28806"
-                                y="673.44971"
-                                transform="matrix(0.5245984,-0.85134982,0.86860509,0.495505,0,0)"
-                                inkscape:export-xdpi="96.290627"
-                                inkscape:export-ydpi="96.290627" />
+                        <svg xmlns="http://www.w3.org/2000/svg" width="26.378479mm" height="21.500059mm" viewBox="0 0 93.467052 76.181312" class="nav__logo-svg">
+                            <g transform="translate(-450.51354,-480.69058)">
+                                <rect style="fill:#fff6d5;"
+                                width="77.921539" height="9.3707905" x="671.51868" y="164.2702"
+                                transform="matrix(0.5245984,0.85134982,0.86860509,-0.495505,0,0)" />
+                                <rect style="fill:#ffffff;"
+                                width="83.62944" height="10.05722" x="-256.28806" y="673.44971"
+                                transform="matrix(0.5245984,-0.85134982,0.86860509,0.495505,0,0)" />
                             </g>
-                            </svg>
+                        </svg>
                         <div class="nav__logo-name">
                             <div>AGATA</div>
                             <div>PATEL</div>
@@ -107,7 +40,7 @@
                 </div>
             </div>
         </div>
-        <div id="nav-links-wrap" class="col-md-6 nav-links-wrap navbar-collapse collapse-in">
+        <div id="nav-links-wrap" class="col-md-9 col-sm-9 nav-links-wrap">
             <ul class="nav-links">
                 <li><a id="portfolio-link" href="/portfolio">portfolio</a></li>
                 <li><a id="projects-link" href="/projects">projekty</a></li>
@@ -121,36 +54,65 @@
                 </li>
             </ul>
         </div>
-        <div class="nav-button">
-            <span>MENU!</span>
+        <div class="nav-button col-sm-9 col-xs-6">
+            <svg fill="#FFFFFF" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+                <path d="M0 0h24v24H0z" fill="none"/>
+                <path d="M3 18h18v-2H3v2zm0-5h18v-2H3v2zm0-7v2h18V6H3z"/>
+            </svg>
         </div>
     </div>
 </nav>
+<section class="mobile-menu">
+    <div class="mobile-menu__close">
+        <svg fill="#000000" class="mobile-menu__close-svg" height="24" viewBox="0 0 24 24" width="24" xmlns="http://www.w3.org/2000/svg">
+            <path d="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12z"/>
+            <path d="M0 0h24v24H0z" fill="none"/>
+        </svg>
+    </div>
+    <div class="nav__logo-svg-wrap">
+        <?xml version="1.0" encoding="UTF-8" standalone="no"?>
+        <svg xmlns="http://www.w3.org/2000/svg" width="26.378479mm" height="21.500059mm" viewBox="0 0 93.467052 76.181312" class="nav__logo-svg">
+            <g transform="translate(-450.51354,-480.69058)">
+                <rect style="fill:#fff6d5;"
+                width="77.921539" height="9.3707905" x="671.51868" y="164.2702"
+                transform="matrix(0.5245984,0.85134982,0.86860509,-0.495505,0,0)" />
+                <rect style="fill:#ffffff;"
+                width="83.62944" height="10.05722" x="-256.28806" y="673.44971"
+                transform="matrix(0.5245984,-0.85134982,0.86860509,0.495505,0,0)" />
+            </g>
+        </svg>
+    </div>
+    <ul class="nav-links">
+        <li><a id="portfolio-link" href="/portfolio">portfolio</a></li>
+        <li><a id="projects-link" href="/projects">projekty</a></li>
+        <li><a id="cv-link" href="/cv">cv</a></li>
+        <li><a id="contact-link" href="/contact">kontakt</a></li>
+        <li class="lang-chooser">
+            <a>
+                <span class="lang-selected">pl</span>
+                <span>en</span>
+            </a>
+        </li>
+    </ul>
+</section>
+
 	<!-- endinject -->
-	<section class="mobile-menu">
-		<div class="mobile-menu__close">
-			XXX
-		</div>
-	</section>
     <section id="portfolio" class="ha-waypoint main-section portfolio" data-animate-down="ha-header-small" data-animate-up="ha-header-large">
         <div class="row portfolio-row portfolio-row-title">
             <div class="col-md-12 portfolio-title">Realizacje</div>
         </div>
 		<div class="row portfolio-row portfolio-row-1">
-            <div class="col-md-12"></div>
+			<img class="bg-placeholder" src="../static/img/1.jpg" alt="">
         </div>
         <div class="row portfolio-row portfolio-row-2">
             <div class="col-md-6 col-sm-12 portfolio-col">
 				<div class="pf-col__hover-wrap">
-					<img data-frz-src="../static/img/2.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
-					<!--<div class="pf-col__image-overlay">
-						<a href="#">BUMBOO</a>
-					</div>-->
+					<img class="portfolio-img" data-frz-src="../static/img/2.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
 				</div>
             </div>
             <div class="col-md-6  col-sm-12 portfolio-col">
 				<div class="pf-col__hover-wrap">
-					<img data-frz-src="../static/img/3.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
+					<img class="portfolio-img" data-frz-src="../static/img/3.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
 				</div>
             </div>
         </div>
@@ -164,11 +126,17 @@
 				</div>
             </div>
         </div>
-		<div class="hero-image hero-image-1 portfolio-row-4"></div>
+		<div class="hero-image hero-image-1 portfolio-row-4">
+			<img class="bg-placeholder" src="../static/img/4.jpg" alt="">
+		</div>
 		<div class="row portfolio-row-5">
-			<div>
-				<div id="portfolio-row-5__first-image" class="portfolio-row-5__first-image"></div>
-				<img id="img-12" data-frz-src="../static/img/6.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
+			<div class="portfolio-row-5__wrap">
+				<div class="portfolio-row-5__bg-wrap">
+					<div id="portfolio-row-5__first-image" class="portfolio-row-5__first-image">
+						<img class="bg-placeholder" src="../static/img/5.jpg" alt="">
+					</div>
+				</div>
+				<img id="img-12" class="portfolio-img portfolio-row-5__second-image" data-frz-src="../static/img/6.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
 			</div>
         </div>
 		<div class="row portfolio-row portfolio-row-6 quote-row">
@@ -181,7 +149,9 @@
 				</div>
             </div>
         </div>
-		<div class="hero-image hero-image-2 portfolio-row-7"></div>
+		<div class="hero-image hero-image-2 portfolio-row-7">
+			<img class="bg-placeholder" src="../static/img/7.jpg" alt="">
+		</div>
 		<div class="row portfolio-row portfolio-row-8 quote-row">
             <div class="col-md-12 quote">
 				<div class="quote-wall">
@@ -193,20 +163,17 @@
             </div>
         </div>
 		<div class="row portfolio-row portfolio-row-9">
-            <div class="col-md-12"></div>
+            <img class="bg-placeholder" src="../static/img/8.jpg">
         </div>
         <div class="row portfolio-row portfolio-row-10">
             <div class="col-md-6 col-sm-12 portfolio-col">
 				<div class="pf-col__hover-wrap">
-					<img data-frz-src="../static/img/9.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
-					<!--<div class="pf-col__image-overlay">
-						<a href="#">BUMBOO</a>
-					</div>-->
+					<img class="portfolio-img" data-frz-src="../static/img/9.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
 				</div>
             </div>
             <div class="col-md-6  col-sm-12 portfolio-col">
 				<div class="pf-col__hover-wrap">
-					<img data-frz-src="../static/img/10.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
+					<img class="portfolio-img" data-frz-src="../static/img/10.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
 					<!--<div class="pf-col__image-overlay">
 						<a href="#">BUMBOO</a>
 					</div>-->
@@ -223,84 +190,18 @@
         <div class="row">
             <div class="col-md-12">
                 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-                            <!-- Created with Inkscape (http://www.inkscape.org/) -->
-                            <svg
-                            xmlns:dc="http://purl.org/dc/elements/1.1/"
-                            xmlns:cc="http://creativecommons.org/ns#"
-                            xmlns="http://www.w3.org/2000/svg"
-                            xmlns:inkscape="http://www.inkscape.org/namespaces/inkscape"
-                            width="26.378479mm"
-                            height="21.500059mm"
-                            viewBox="0 0 93.467052 76.181312"
-                            class="nav__logo-svg"
-                            version="1.1"
-                            inkscape:version="0.91 r13725"
-                            sodipodi:docname="logo-draw.svg">
-                            <defs
-                                id="defs4" />
-                            <sodipodi:namedview
-                                id="base"
-                                pagecolor="#ffffff"
-                                bordercolor="#666666"
-                                borderopacity="1.0"
-                                inkscape:pageopacity="0.0"
-                                inkscape:pageshadow="2"
-                                inkscape:zoom="1"
-                                inkscape:cx="-415.64951"
-                                inkscape:cy="146.49586"
-                                inkscape:document-units="px"
-                                inkscape:current-layer="layer1"
-                                showgrid="false"
-                                showborder="false"
-                                fit-margin-top="0"
-                                fit-margin-left="0"
-                                fit-margin-right="0"
-                                fit-margin-bottom="0"
-                                inkscape:window-width="1920"
-                                inkscape:window-height="1018"
-                                inkscape:window-x="1672"
-                                inkscape:window-y="-8"
-                                inkscape:window-maximized="1" />
-                            <metadata
-                                id="metadata7">
-                                <rdf:RDF>
-                                <cc:Work
-                                    rdf:about="">
-                                    <dc:format>image/svg+xml</dc:format>
-                                    <dc:type
-                                    rdf:resource="http://purl.org/dc/dcmitype/StillImage" />
-                                    <dc:title></dc:title>
-                                </cc:Work>
-                                </rdf:RDF>
-                            </metadata>
-                            <g
-                                inkscape:label="Layer 1"
-                                inkscape:groupmode="layer"
-                                id="layer1"
-                                transform="translate(-450.51354,-480.69058)">
-                                <rect
-                                style="opacity:1;fill:#fff6d5;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:0;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                                id="rect4161-7"
-                                width="77.921539"
-                                height="9.3707905"
-                                x="671.51868"
-                                y="164.2702"
-                                transform="matrix(0.5245984,0.85134982,0.86860509,-0.495505,0,0)"
-                                inkscape:export-xdpi="96.290627"
-                                inkscape:export-ydpi="96.290627" />
-                                <rect
-                                style="opacity:1;fill:#ffffff;fill-opacity:1;fill-rule:evenodd;stroke:none;stroke-width:0;stroke-miterlimit:4;stroke-dasharray:none;stroke-opacity:1"
-                                id="rect4161"
-                                width="83.62944"
-                                height="10.05722"
-                                x="-256.28806"
-                                y="673.44971"
-                                transform="matrix(0.5245984,-0.85134982,0.86860509,0.495505,0,0)"
-                                inkscape:export-xdpi="96.290627"
-                                inkscape:export-ydpi="96.290627" />
-                            </g>
-                            </svg>
+                <svg xmlns="http://www.w3.org/2000/svg" width="26.378479mm" height="21.500059mm" viewBox="0 0 93.467052 76.181312" class="nav__logo-svg">
+                    <g transform="translate(-450.51354,-480.69058)">
+                        <rect style="fill:#fff6d5;"
+                        width="77.921539" height="9.3707905" x="671.51868" y="164.2702"
+                        transform="matrix(0.5245984,0.85134982,0.86860509,-0.495505,0,0)" />
+                        <rect style="fill:#ffffff;"
+                        width="83.62944" height="10.05722" x="-256.28806" y="673.44971"
+                        transform="matrix(0.5245984,-0.85134982,0.86860509,0.495505,0,0)" />
+                    </g>
+                </svg>
             </div>
+        </div>
         <div class="row">
             <ul class="foot-social col-md-12 text-center">
             <li><a target="_blank" href="https://www.facebook.com/Agata.Patel">
@@ -376,6 +277,7 @@
         </div>
     </div>
 </footer>
+
 	<!-- endinject -->
 </body>
 </html>
