--- a/src/contact.html
+++ b/src/contact.html
@@ -7,7 +7,7 @@
 <body>
 	<!-- inject:nav:html -->
 	<!-- endinject -->
-    <section id="contact" style="height: 100vh;" class="ha-waypoint main-section contact" data-animate-down="ha-header-small" data-animate-up="ha-header-large">
+    <section id="contact" class="ha-waypoint main-section contact" data-animate-down="ha-header-small" data-animate-up="ha-header-large">
 		<div class="contact-headline">
 			Ahoy.
 		</div>
