--- a/src/portfolio.html
+++ b/src/portfolio.html
@@ -7,30 +7,22 @@
 <body>
 	<!-- inject:nav:html -->
 	<!-- endinject -->
-	<section class="mobile-menu">
-		<div class="mobile-menu__close">
-			XXX
-		</div>
-	</section>
     <section id="portfolio" class="ha-waypoint main-section portfolio" data-animate-down="ha-header-small" data-animate-up="ha-header-large">
         <div class="row portfolio-row portfolio-row-title">
             <div class="col-md-12 portfolio-title">Realizacje</div>
         </div>
 		<div class="row portfolio-row portfolio-row-1">
-            <div class="col-md-12"></div>
+			<img class="bg-placeholder" src="../static/img/1.jpg" alt="">
         </div>
         <div class="row portfolio-row portfolio-row-2">
             <div class="col-md-6 col-sm-12 portfolio-col">
 				<div class="pf-col__hover-wrap">
-					<img data-frz-src="../static/img/2.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
-					<!--<div class="pf-col__image-overlay">
-						<a href="#">BUMBOO</a>
-					</div>-->
+					<img class="portfolio-img" data-frz-src="../static/img/2.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
 				</div>
             </div>
             <div class="col-md-6  col-sm-12 portfolio-col">
 				<div class="pf-col__hover-wrap">
-					<img data-frz-src="../static/img/3.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
+					<img class="portfolio-img" data-frz-src="../static/img/3.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
 				</div>
             </div>
         </div>
@@ -44,11 +36,17 @@
 				</div>
             </div>
         </div>
-		<div class="hero-image hero-image-1 portfolio-row-4"></div>
+		<div class="hero-image hero-image-1 portfolio-row-4">
+			<img class="bg-placeholder" src="../static/img/4.jpg" alt="">
+		</div>
 		<div class="row portfolio-row-5">
-			<div>
-				<div id="portfolio-row-5__first-image" class="portfolio-row-5__first-image"></div>
-				<img id="img-12" data-frz-src="../static/img/6.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
+			<div class="portfolio-row-5__wrap">
+				<div class="portfolio-row-5__bg-wrap">
+					<div id="portfolio-row-5__first-image" class="portfolio-row-5__first-image">
+						<img class="bg-placeholder" src="../static/img/5.jpg" alt="">
+					</div>
+				</div>
+				<img id="img-12" class="portfolio-img portfolio-row-5__second-image" data-frz-src="../static/img/6.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
 			</div>
         </div>
 		<div class="row portfolio-row portfolio-row-6 quote-row">
@@ -61,7 +59,9 @@
 				</div>
             </div>
         </div>
-		<div class="hero-image hero-image-2 portfolio-row-7"></div>
+		<div class="hero-image hero-image-2 portfolio-row-7">
+			<img class="bg-placeholder" src="../static/img/7.jpg" alt="">
+		</div>
 		<div class="row portfolio-row portfolio-row-8 quote-row">
             <div class="col-md-12 quote">
 				<div class="quote-wall">
@@ -73,20 +73,17 @@
             </div>
         </div>
 		<div class="row portfolio-row portfolio-row-9">
-            <div class="col-md-12"></div>
+            <img class="bg-placeholder" src="../static/img/8.jpg">
         </div>
         <div class="row portfolio-row portfolio-row-10">
             <div class="col-md-6 col-sm-12 portfolio-col">
 				<div class="pf-col__hover-wrap">
-					<img data-frz-src="../static/img/9.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
-					<!--<div class="pf-col__image-overlay">
-						<a href="#">BUMBOO</a>
-					</div>-->
+					<img class="portfolio-img" data-frz-src="../static/img/9.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
 				</div>
             </div>
             <div class="col-md-6  col-sm-12 portfolio-col">
 				<div class="pf-col__hover-wrap">
-					<img data-frz-src="../static/img/10.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
+					<img class="portfolio-img" data-frz-src="../static/img/10.jpg" src=data:image/gif;base64,R0lGODlhAQABAAAAACH5BAEKAAEALAAAAAABAAEAAAICTAEAOw== onload=lzld(this) onerror=lzld(this) />
 					<!--<div class="pf-col__image-overlay">
 						<a href="#">BUMBOO</a>
 					</div>-->
